fix: Text color contrast on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,17 +13,23 @@
         color-scheme: dark;
     }
     :root {
-        --color-white: oklch(1 0 0);
-        --color-black: oklch(0 0 0);
-        --color-default: light-dark(var(--color-black), var(--color-white));
-        --color-inverted: light-dark(var(--color-white), var(--color-black));
+        --color-white: oklch(1 0 0); /* NHN */
+        --color-black: oklch(0 0 0); /* NHN */
+        --color-default: light-dark(
+            var(--color-black),
+            var(--color-white)
+        ); /* NHN */
+        --color-inverted: light-dark(
+            var(--color-white),
+            var(--color-black)
+        ); /* NHN */
         --color-background: light-dark(
             oklch(0.9429 0.0029 264.5),
             oklch(0.13 0.028 261.692)
         ); /* NHN */
         --color-foreground: light-dark(
             oklch(0.3516 0.0187 264.3),
-            oklch(0.8545 0.0115 269.5)
+            oklch(0.9543 0.0115 269.5)
         ); /* NHN */
         --color-card: light-dark(
             oklch(0.9429 0.0029 264.5),
@@ -54,7 +60,7 @@
         --color-muted: var(--color-stroke); /* NHN */
         --color-muted-foreground: light-dark(
             oklch(0.5655 0.01472 266.647),
-            oklch(0.7173 0.01743 262.779)
+            oklch(0.8012 0.01743 262.779)
         ); /* NHN */
         --color-accent: var(--color-stroke); /* NHN */
         --color-accent-foreground: light-dark(
@@ -103,22 +109,22 @@
         --color-highlighted: light-dark(
             oklch(0.666 0.15222 239.89),
             oklch(0.692 0.1595 240.4)
-        );
-        --color-alert: oklch(63.7% 0.237 25.331);
+        ); /* NHN */
+        --color-alert: oklch(63.7% 0.237 25.331); /* NHN */
 
         --color-pattern: light-dark(
             oklch(0.8759 0.005 264.5),
             oklch(from var(--color-stroke) calc(l - 0.04) c h)
-        );
+        ); /* NHN */
         --color-stroke: light-dark(
             oklch(0.85 0.005 264.5),
             oklch(0.275 0.0162 252.5)
-        );
+        ); /* NHN */
 
         --color-element-hover: light-dark(
             oklch(from var(--color-background) calc(l - 0.015) c h),
             oklch(from var(--color-background) calc(l + 0.05) c h)
-        );
+        ); /* NHN */
     }
 }
 
